# WebsiteScorecard

./: .gitignore  README.md  pyproject.toml
data/: mins_depts_test.csv  mins_depts_test_scored.csv
src/websitescorecard/: __init__.py  cli.py  csv_io.py  runner.py  url_utils.py
src/websitescorecard/checks/: __init__.py  base.py  ssl.py  trilingual.py
tests/: test_cli.py  test_csv_io.py  test_runner.py  test_ssl.py  test_trilingual.py  test_url_utils.py
