[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "websitescorecard"
version = "0.1.0"
description = "CLI to scan websites from a CSV and enrich with check results"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.15.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.8.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
websitescorecard = "websitescorecard.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
